updates landing html document

--- a/example/multi-user-3d-web-experience/client/public/index.html
+++ b/example/multi-user-3d-web-experience/client/public/index.html
@@ -74,6 +74,11 @@
     <div class="main-content">
       <h1>Create Multiplayer Games and 3D Web Experiences with Zero Complexity</h1>
 
+      <img
+        src="https://mml.mgz.me/web-client/3d-web-experience-thumbnail.jpg"
+        alt="The 3D Web Experience"
+      />
+
       <p>
         <strong>The 3D Web Experience</strong> is a revolutionary platform that showcases a
         technology that makes it easy for anyone - even complete beginners - to build
