--- a/example/multi-user-3d-web-experience/server/mml-documents/jukebox.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/jukebox.html
@@ -274,6 +274,7 @@
         labelBackground.setAttribute("emissive", 0);
         labelBackground.setAttribute("opacity", 0.9);
         labelBackground.setAttribute("collide", false);
+        selectionMenuItems.push(labelBackground);
         selectionMenuGroup.appendChild(labelBackground);
 
         const label = document.createElement("m-label");
@@ -394,5 +395,5 @@
   }, 500);
 
   // refresh music list every 5 minutes
-  setInterval(() => listAvailableSongs(), 1000 * 60 * 5);
+  // setInterval(() => listAvailableSongs(), 1000 * 60 * 5);
 </script>
